--- a/docker/alice/lnd.conf
+++ b/docker/alice/lnd.conf
@@ -11,4 +11,4 @@ bitcoin.defaultchanconfs=1
 [Routing]
 routing.assumechanvalid=1
 [Neutrino]
-neutrino.connect=blockchain:18555
+neutrino.connect=10.5.0.5:18555
