--- a/docker/breez_server/.env
+++ b/docker/breez_server/.env
@@ -2,6 +2,8 @@ GRPC_LISTEN_ADDRESS="0.0.0.0:50053"
 HTTP_LISTEN_ADDRESS="0.0.0.0:60053"
 FCM_KEY=""
 LND_ADDRESS="10.5.0.3:10009"
+LND_CHANNEL_ACCEPTOR="amt >= 10000"
+SUBSWAPPER_LND_CHANNEL_ACCEPTOR="amt >= 10000"
 NETWORK=simnet
 GOOGLE_CLOUD_SERVICE_FILE=""
 GOOGLE_CLOUD_IMAGES_BUCKET_NAME=""
