--- a/docker/lnd/Dockerfile
+++ b/docker/lnd/Dockerfile
@@ -1,12 +1,15 @@
 FROM alpine:3.12 AS builder
 RUN apk update
-RUN apk add git go musl-dev make
-RUN git clone https://github.com/breez/lnd -b breez-node-v0.11.0-beta
+RUN apk add git go musl-dev make bash
+RUN git clone https://github.com/breez/lnd -b zero-conf-debug
 
 RUN cd lnd \
     && go build -tags=experimental,invoicesrpc,signrpc,autopilotrpc,experimental,submarineswaprpc,chanreservedynamic,routerrpc,walletrpc,chainrpc ./cmd/lnd/ \
     && go build -tags=experimental,invoicesrpc,signrpc,autopilotrpc,experimental,submarineswaprpc,chanreservedynamic,routerrpc,walletrpc,chainrpc ./cmd/lncli/
 
 VOLUME /root/.lnd
-EXPOSE 10009 9735
-CMD /lnd/lnd
+EXPOSE 10013 9739
+
+COPY ./docker/lnd/start.sh .
+RUN chmod +x ./start.sh
+ENTRYPOINT /start.sh
