--- a/docker/breez_server/Dockerfile
+++ b/docker/breez_server/Dockerfile
@@ -5,7 +5,7 @@ COPY ./docker/breez_server/.env .
 
 COPY ./docker/breez_server/start.sh .
 RUN chmod +x ./start.sh
-RUN git clone https://github.com/breez/server -b pay_to_open
+RUN git clone https://github.com/breez/server
 RUN cd server \
     && go build .
 RUN go get github.com/joho/godotenv/cmd/godotenv
