--- a/docker/alice/Dockerfile
+++ b/docker/alice/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.12 AS builder
+FROM golang:1.16-alpine3.12 AS builder
 RUN apk update
 RUN apk add git go musl-dev make bash
 RUN export tags="experimental signrpc walletrpc chainrpc invoicesrpc routerrpc backuprpc peerrpc submarineswaprpc breezbackuprpc"
