--- a/docker/breez_server/Dockerfile
+++ b/docker/breez_server/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.12 AS builder
+FROM golang:1.16-alpine3.12 AS builder
 RUN apk update
 RUN apk add git go musl-dev make
 COPY ./docker/breez_server/.env .
@@ -16,5 +16,5 @@ RUN cd lnd \
 COPY ./itest/generate_macaroon_hex.go .
 RUN go build ./generate_macaroon_hex.go
 RUN chmod +x ./generate_macaroon_hex
-RUN go get -tags 'postgres' -u github.com/golang-migrate/migrate/cmd/migrate
+RUN go install -tags 'postgres' github.com/golang-migrate/migrate/v4/cmd/migrate@latest
 ENTRYPOINT ./start.sh
