--- a/docker/lspd/Dockerfile
+++ b/docker/lspd/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.14-alpine3.12 AS builder
+FROM golang:1.16-alpine3.12 AS builder
 RUN apk update
 RUN apk add git go musl-dev make
 COPY ./docker/lspd/.env .
@@ -6,6 +6,7 @@ COPY ./docker/lspd/start.sh .
 RUN chmod +x ./start.sh
 RUN git clone https://github.com/breez/lspd -b master
 RUN cd lspd \
+    && go mod tidy \
     && go build .
 RUN go get github.com/joho/godotenv/cmd/godotenv
 RUN git clone https://github.com/breez/lnd -b breez-node-v0.11.0-beta
@@ -18,6 +19,6 @@ RUN chmod +x ./generate_macaroon_hex
 RUN chmod +x ./lspd/lspd
 RUN ./lspd/lspd genkey >> .env
 
-RUN go get -tags 'postgres' -u github.com/golang-migrate/migrate/cmd/migrate
+RUN go install -tags 'postgres' github.com/golang-migrate/migrate/v4/cmd/migrate@latest
 #CMD /root/go/bin/godotenv ./server/server
 ENTRYPOINT ./start.sh
