--- a/docker/breez_server/Dockerfile
+++ b/docker/breez_server/Dockerfile
@@ -9,7 +9,7 @@ RUN git clone https://github.com/breez/server
 RUN cd server \
     && go build .
 RUN go get github.com/joho/godotenv/cmd/godotenv
-RUN git clone https://github.com/breez/lnd -b breez-node-v0.10.0-beta-htlc-interceptor-zeroconf
+RUN git clone https://github.com/breez/lnd -b fix-subswapper-macaroon
 RUN cd lnd \
     && tage="signrpc walletrpc chainrpc invoicesrpc routerrpc backuprpc peerrpc submarineswaprpc breezbackuprpc" \
     && make install
