--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,21 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Launch",
-            "type": "go",
-            "request": "launch",
-            "mode": "auto",
-            "program": "${fileDirname}",
-            "env": {},
-            "args": [""]
-        }
-    ]
+ // Use IntelliSense to learn about possible attributes.
+ // Hover to view descriptions of existing attributes.
+ // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+ "version": "0.2.0",
+ "configurations": [
+  {
+   "name": "Launch",
+   "type": "go",
+   "request": "launch",
+   "mode": "auto",
+   "program": "${fileDirname}",
+   "env": {
+    "LND_DIR": "/Users/roeierez/lnd-support"
+   },
+   "args": [
+    ""
+   ]
+  }
+ ]
 }
